--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -8,14 +8,16 @@
       <!-- Bread crubms-->
       <app-breadcrumbs></app-breadcrumbs>
       <!-- Sistema de rutas -->
-
+      <router-outlet></router-outlet>
+      <!--
       <div class="row">
         <div class="col-12">
           <div class="card">
-            <div class="card-body"><router-outlet></router-outlet></div>
+            <div class="card-body"></div>
           </div>
         </div>
       </div>
+      -->
     </div>
 
     <!-- ============================================================== -->
