--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -4,14 +4,16 @@
 <section
   id="wrapper"
   class="login-register login-sidebar"
-  style="background-image: url(../assets/images/background/login-register.jpg);"
+  style="background-image: url(../assets/images/background/login-register.jpg)"
 >
   <div class="login-box card">
     <div class="card-body">
       <form
         class="form-horizontal form-material"
         id="loginform"
-        action="index.html"
+        autocomplete="off"
+        [formGroup]="registerForm"
+        (ngSubmit)="crearUsuario()"
       >
         <a href="javascript:void(0)" class="text-center db"
           ><img src="../assets/images/logo-icon.png" alt="Home" /><br /><img
@@ -25,8 +27,8 @@
             <input
               class="form-control"
               type="text"
-              required=""
               placeholder="Name"
+              formControlName="nombre"
             />
           </div>
         </div>
@@ -35,8 +37,8 @@
             <input
               class="form-control"
               type="text"
-              required=""
               placeholder="Email"
+              formControlName="email"
             />
           </div>
         </div>
@@ -45,8 +47,8 @@
             <input
               class="form-control"
               type="password"
-              required=""
               placeholder="Password"
+              formControlName="password"
             />
           </div>
         </div>
@@ -57,19 +59,38 @@
               type="password"
               required=""
               placeholder="Confirm Password"
+              formControlName="password2"
             />
           </div>
         </div>
         <div class="form-group row">
           <div class="col-md-12">
             <div class="checkbox checkbox-primary p-t-0">
-              <input id="checkbox-signup" type="checkbox" />
+              <input
+                id="checkbox-signup"
+                type="checkbox"
+                formControlName="terminos"
+              />
               <label for="checkbox-signup">
                 I agree to all <a href="#">Terms</a></label
               >
             </div>
           </div>
         </div>
+
+        <div class="row">
+          <div class="col text-danger">
+            <p *ngIf="campoNoValido('nombre')">* EL nombre es obligatorio</p>
+            <p *ngIf="campoNoValido('email')">
+              * EL email es obligatorio y tiene que ser obligatorio
+            </p>
+            <p *ngIf="contrasenasNoValidas()">
+              * Las contraseñas deben de ser iguales
+            </p>
+            <p *ngIf="aceptaTerminos()">* Debe aceptar los términos de uso</p>
+          </div>
+        </div>
+
         <div class="form-group text-center m-t-20">
           <div class="col-xs-12">
             <button
@@ -84,9 +105,7 @@
           <div class="col-sm-12 text-center">
             <p>
               Already have an account?
-              <a href="pages-login-2.html" class="text-info m-l-5"
-                ><b>Sign In</b></a
-              >
+              <a routerLink="/login" class="text-info m-l-5"><b>Sign In</b></a>
             </p>
           </div>
         </div>
