--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -24,11 +24,11 @@
     <!-- ============================================================== -->
     <!-- footer -->
     <!-- ============================================================== -->
-    <footer class="footer">
-      © 2020 Admin Pro ~ Roby Zuñiga
-    </footer>
+    <footer class="footer">© 2020 Admin Pro ~ Roby Zuñiga</footer>
     <!-- ============================================================== -->
     <!-- End footer -->
     <!-- ============================================================== -->
   </div>
 </div>
+
+<app-modal-imagen></app-modal-imagen>
