--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -341,7 +341,7 @@
                       }}{{ usuario.email.length > 22 ? "..." : "" }}
                     </p>
                     <a
-                      href="pages-profile.html"
+                      routerLink="./perfil"
                       class="btn btn-rounded btn-danger btn-sm"
                       >View Profile</a
                     >
