--- a/src/styles.css
+++ b/src/styles.css
@@ -16,3 +16,40 @@
   width: 140px;
   height: 140px;
 }
+
+.w100 {
+  width: 100px;
+}
+
+.w40 {
+  width: 40px;
+}
+
+.w140 {
+  width: 140px;
+}
+
+.w50 {
+  width: 40px;
+  height: 40px;
+  overflow: hidden;
+  border-radius: 999px;
+}
+
+.w50 img {
+  width: 100%;
+}
+
+.fondo-modal-imagen {
+  background-color: rgba(0, 0, 0, 0.6);
+  height: 100%;
+  left: 0;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 9999;
+}
+
+.oculto{
+  display:none;
+}
