--- a/src/styles.css
+++ b/src/styles.css
@@ -36,6 +36,10 @@
   border-radius: 999px;
 }
 
+.w200 {
+  width: 200px;
+}
+
 .w50 img {
   width: 100%;
 }
@@ -50,6 +54,6 @@
   z-index: 9999;
 }
 
-.oculto{
-  display:none;
+.oculto {
+  display: none;
 }
