--- a/src/app/pages/mantenimientos/medicos/medico.component.html
+++ b/src/app/pages/mantenimientos/medicos/medico.component.html
@@ -17,8 +17,7 @@
               <div class="input-group">
                 <img
                   [src]="medicoSeleccionado.imagen | imagen: 'medicos'"
-                  class="w200 cursor"
-                  (click)="abrirModal(medicoSeleccionado)"
+                  class="w200"
                 />
               </div>
             </div>
